[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/TestFontTree.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/gold_dices.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/enemy_retraits.png" type="Texture" id=4]
[ext_resource path="res://nodes/TutorialPopup.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 39
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 2 )

[node name="TutorialPopup" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.384314, 0.384314, 0.384314, 0.635294 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -705.0
margin_top = -343.0
margin_right = 705.0
margin_bottom = 87.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="lb_desc" type="Label" parent="ColorRect"]
margin_left = 225.0
margin_top = 40.0
margin_right = 1365.0
margin_bottom = 204.0
custom_colors/font_color = Color( 0.843137, 0.843137, 0.843137, 1 )
custom_constants/line_spacing = 4
custom_fonts/font = SubResource( 1 )
text = "Lazna tus dados y elige cual utilizar, esto moverá tu mano en el cinturón de armas para utilizarlas!
Si sacas algún 6 (seis) obtendrás un dado extra!!"
valign = 1
autowrap = true

[node name="lb_desc2" type="Label" parent="ColorRect"]
margin_left = 96.0
margin_top = 251.0
margin_right = 1120.0
margin_bottom = 336.0
custom_colors/font_color = Color( 0.843137, 0.843137, 0.843137, 1 )
custom_constants/line_spacing = 4
custom_fonts/font = SubResource( 1 )
text = "Los enemigos intentarán dañarte, evitalo a toda costa! 
Al destruirlos ganarás experiencia."
align = 2
valign = 1
autowrap = true

[node name="ButtonReset" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -55.0
margin_right = 124.5
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "OK"

[node name="Sprite2" type="Sprite" parent="ColorRect"]
position = Vector2( 91, 101 )
texture = ExtResource( 3 )
hframes = 7
frame = 6

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 146, 170 )
rotation = 0.181445
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
hframes = 7
frame = 5

[node name="Sprite3" type="Sprite" parent="ColorRect"]
modulate = Color( 0.305882, 0.305882, 0.305882, 1 )
position = Vector2( 1310, 263.282 )
scale = Vector2( 1.60563, 1.60563 )
texture = ExtResource( 4 )
hframes = 5

[node name="Sprite4" type="Sprite" parent="ColorRect"]
modulate = Color( 0.517647, 0.517647, 0.517647, 1 )
position = Vector2( 1262, 279.282 )
scale = Vector2( 1.60563, 1.60563 )
texture = ExtResource( 4 )
hframes = 5

[node name="Sprite5" type="Sprite" parent="ColorRect"]
position = Vector2( 1222, 295.282 )
scale = Vector2( 1.60563, 1.60563 )
texture = ExtResource( 4 )
hframes = 5
